styles.css
/* ... */
.services-home-item__inner{
    display: flex;
    flex-direction: column;
    
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    padding: 1.5vw;
    max-height: 100%;
    overflow: scroll;
    gap: 0.75rem;
    padding: calc(var(--spacing-x) * 1.5) var(--spacing-x);
    @media(min-width: 31.25em){
        padding: calc(var(--spacing-x) * 1.25) var(--spacing-x);
    }
    @media(min-width: 43.75em){
        padding: calc(var(--spacing-x) * 1.1) var(--spacing-x);
    }
    @media(min-width: 62.5em){
        justify-content: flex-end;
        padding: calc(var(--spacing-md) - 20px) calc(var(--spacing-lg) - 20px) calc(var(--spacing-md) - 20px) calc(var(--spacing-md) - 20px);
    }
}
.services-home-item__title{
    font-size: clamp(28px, 3vw, 48px);;
    line-height: 120%;
    font-weight: 600;
    letter-spacing: -.04em;
    transition: all .3s cubic-bezier(1, 0, 0, 1);
    
    @media(min-width: 120rem){
        font-size: 3.75rem;
    }
   
}
.services-home-item__body{
    font-size: clamp(17px, 1.25vw, 20px);
    @media(min-width: 62.5em){
        font-size: 0.1px;
        line-height: 150%;
        font-weight: 500;
        opacity: 0;
        transition: opacity .3s 0s;
        
        .services-home-item__inner:hover &{
            transition: opacity .3s .1s;
            font-size: clamp(14px, 1.25vw, 20px);
            opacity: 1;
        }
    }
}
.services-home-item__arrow {  
    display: none;
    @media(min-width: 62.5em){
        display: block;
        position: absolute;
        top: var(--spacing-md);
        left: calc(var(--spacing-md) - 20px);
        transform: translateX(-1rem);
        transition: all .6s cubic-bezier(1, 0, 0, 1);
        opacity: 0; 
        width: clamp(30px, 2.65vw, 42px);

        .services-home-item__inner:hover &, .services-home-item__inner:focus &{
            opacity: 1;
            transform: translateX(0);
        }
    }
}

/* Callout
************************************************************************/
.callout__callout{
    font-size: 9.8vw;
    letter-spacing: -.04em;
    font-weight: 600;
}


/* Image full width
*******************************************************/
.image-fw-block {
    display: flex;
    flex-direction: column;
    justify-content: flex-end;
    aspect-ratio: 1 / 1;
    
    @media(min-width: 31.25em){
        aspect-ratio: 5 / 4;
    }
    @media(min-width: 62.5em){
        aspect-ratio: 16 / 9;
    }
}
.image-fw-block__image {
    position: absolute;
    width: 100%;
    height: 100%;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    z-index: -1;

    &:before {
        content: '';
        position: absolute;
        top: 0;
        right: 0;
        bottom: 0;
        left: 0;
        background: linear-gradient(6deg, rgba(0,0,0,1) 0%, rgba(0,0,0,0) 32%);
        z-index: 1;
    }
}
.image-fw__content {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    gap: 1.5rem;
    width: 100%;
    color: var(--color-white);
    @media(min-width: 31.25em){
        gap: 3rem;
        flex-direction: row;
        align-items: flex-end;
    }
    @media(min-width: 62.5em){
        align-items: center;
    }
}
.image-fw__avatars-col {
    display: flex;
    flex-direction: column;
    font-weight: 600;
    
    @media(min-width: 31.25em){
        gap: .5rem;
    }
    @media(min-width: 62.5em){
        align-items: center;
        flex-direction: row;
        gap: 1.5rem;
    }
}
.image-fw__avatars {
    display: flex;
}
.image-fw__avatar {
    width: 3.75rem;
    aspect-ratio: 1 / 1;
    border: 0.25rem solid var(--color-black);
    border-radius: 100%;
    overflow: hidden;
    
    @media(min-width: 62.5em){
        width: 5.3125rem;
    }
    
    & + & {
        margin-left: -0.375rem;
        @media(min-width: 62.5em){
            margin-left: -0.625rem;
        }
    }
}


/* About home
************************************************************************/
.about-home__eyebrow {
    margin-bottom: 1rem;
    @media(min-width: 62.5em){
        position: absolute;
        left: 0;
        top: -4rem;
    }
}


/* Image grid
************************************************************************/
.image-grid-block {
    @media(min-width: 43.75em){
        aspect-ratio: 16 / 9;
        padding-inline: var(--spacing-x);
    }

    .col-4 {
        grid-column: span 12;
        aspect-ratio: 4 / 3;
        @media(min-width: 43.75em){
            grid-column: span 4;
            aspect-ratio: unset;
        }
    }
}
.image-grid__image{
    @media(min-width: 43.75em){
        position: absolute;
        top: 0;
        right: 0;
        bottom: 0;
        left: 0;
    }
}
.image-grid-inner{
    .col:first-child{
        .image-grid__image{
            left: calc(var(--spacing-x) * -1); 
        }
    }
    .col:last-child{
        .image-grid__image{
            right: calc(var(--spacing-x) * -1); 
        }
    }
}


/* About intro
************************************************************************/
.about-intro__grid {
    & > * {
        @media(min-width: 31.25em){
            grid-column: span 6;
        }
    }
}
.about-intro__text {
    @media(min-width: 31.25em){
        padding-right: var(--spacing-sm);
    }
    @media(min-width: 43.75em){
        padding-right: var(--spacing-lg);
    }
}
.about-intro__image {
    aspect-ratio: 16 / 9;
    
    @media(min-width: 31.25em){
        position: absolute;
        aspect-ratio: unset;
        top:calc((var(--spacing-section) * -1));
        bottom:calc((var(--spacing-section) * -1));
        right:calc((var(--spacing-x) * -1));
        left:calc((var(--gutter) * -.5));
    }
    
    @media(min-width: 62.5em){
        top:calc((var(--spacing-section) * -2));
        right: 0;
        bottom: 0;
        left: 0;
    }
}
/* ... */

